--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,18 +18,18 @@
 
   <ion-item>
     <ion-label>Username</ion-label>
-    <ion-input type="text"></ion-input>
+    <ion-input type="text" name="username" [(ngModel)]="data.username"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label>Password</ion-label>
-    <ion-input type="password"></ion-input>
+    <ion-input type="password" name="password" [(ngModel)]="data.password"></ion-input>
   </ion-item>
 
 </ion-list>
 
 <div padding>
-  <button block>Sign In</button>
+  <button block (click)="login()">Sign In</button>
 </div>
   <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
