--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,32 +4,30 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
+<ion-content class="background no-scroll" padding >
+<div class="login-input">
   <ion-list>
 
-  <ion-item>
-    <ion-label>Username</ion-label>
+  <ion-item class="login">
+    <ion-label class="input">Username</ion-label>
     <ion-input type="text" name="username" [(ngModel)]="data.username"></ion-input>
   </ion-item>
 
-  <ion-item>
-    <ion-label>Password</ion-label>
+  <ion-item class="login">
+    <ion-label class="input">Password</ion-label>
     <ion-input type="password" name="password" [(ngModel)]="data.password"></ion-input>
   </ion-item>
 
-</ion-list>
+  </ion-list>
+</div>
 
 <div padding>
-  <button block (click)="login()">Sign In</button>
+  <button class="btn" ion-button large (click)="login()">Sign In</button>
 </div>
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+
+<div class="box">
+  <a href-inappbrowser="../register/register" class=""><span id="span">Don't have an account?</span> Sign Up</a>
+</div>
+
 </ion-content>
