--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <ion-list >
 <ion-item text-wrap *ngFor="let item of newsData" >
-<p >{{item.name}}</p>
+<p >{{item.name}}{{item.price}}</p>
 </ion-item>
 </ion-list>
 </ion-content>
