--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -3,14 +3,14 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Page One</ion-title>
+    <ion-title>Menu</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="background1" padding>
   <ion-list >
-<ion-item text-wrap *ngFor="let item of newsData" >
-<p >{{item.name}}{{item.price}}</p>
+<ion-item class="items" text-wrap *ngFor="let item of newsData" >
+<p >{{item.name}}</p><p class="price">{{item.price}}</p>
 </ion-item>
 </ion-list>
 </ion-content>
