--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -12,8 +12,8 @@
 <ion-item class="items" text-wrap *ngFor="let item of productData" >
 <p>{{item.name}}</p><p class="price">{{item.price}}</p>
 
-<ion-item class="amount">
-    <ion-input type="number" placeholder="0" name="{{item.id}}" id="{{item.id}}" [(ngModel)]="shoppingCart.count"></ion-input>
+<ion-item class="amount" id="item.id" >
+    <ion-input type="number" placeholder="0" name="{{item.id}}" id="item.id" [(ngModel)]="shoppingCart.count"></ion-input>
   </ion-item>
 <button ion-button (click)="add(item.id)">+</button>
 </ion-item>
